# xserver

./: configure.ac
Xi/: exevents.c
composite/: compalloc.c  compositeext.h
dbe/: dbe.c  dbestruct.h
dix/: events.c  selection.c
hw/xfree86/: Makefile.am
hw/xfree86/common/: xf86Config.c  xf86Globals.c  xf86Init.c  xf86Priv.h  xf86Xinput.h
hw/xfree86/dri2/: dri2.c  dri2.h  dri2ext.c
hw/xfree86/hosted/: Makefile.am  hosted-private.h  hosted.c  hosted.h  wayland-drm.c  wayland.c  x11.c
hw/xfree86/xwayland/: Makefile.am  xwayland-client.c  xwayland-cursor.c  xwayland-drm.c  xwayland-input.c  xwayland-output.c  xwayland-private.h  xwayland-window.c  xwayland.c  xwayland.h
include/: dix.h  exevents.h  input.h  inputstr.h  opaque.h  os.h  selection.h  xkbsrv.h  xorg-server.h.in
os/: connection.c  utils.c
xkb/: ddxLoad.c  xkbInit.c
